--- a/style.css
+++ b/style.css
@@ -2,3 +2,12 @@
 .container-fluid{
     border: 5px solid black;
 }
+.container{
+    border: 1px solid black;
+}
+body{
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+}
