--- a/style.css
+++ b/style.css
@@ -35,3 +35,17 @@ body{
     border: 1px solid black;
     width: 700px;
 }
+.cf{
+    background-color: palevioletred;
+    text-align: center;
+}
+#f-image{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+.z-image{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+  }
